[gd_scene load_steps=2 format=3 uid="uid://dfhcmmbuaxgg8"]

[ext_resource type="Script" uid="uid://j3sbtgyjiqms" path="res://scripts/MainMenu.gd" id="1_yqorp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqorp")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -104.0
offset_right = 178.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Trial of Apprentice"

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="ExitGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[node name="Slots" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Slot1" type="Button" parent="CenterContainer/VBoxContainer/Slots"]
layout_mode = 2
text = "Save 1"

[node name="Slot2" type="Button" parent="CenterContainer/VBoxContainer/Slots"]
layout_mode = 2
text = "Save 2"

[node name="Slot3" type="Button" parent="CenterContainer/VBoxContainer/Slots"]
layout_mode = 2
text = "Save 3"
